util/debug-utils/apache-test/apache-ingress-beta.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apacheingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apachehost
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port: 
              number: 8282
      - path: "/v2"
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 8282
